--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@supabase/auth-ui-react": "^0.4.5",
     "@supabase/auth-ui-shared": "^0.1.7",
     "@supabase/supabase-js": "^2.33.2",
+    "daisyui": "^3.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
